Fix T93797, T93809: Crash/undefined-behavior when opening demo file

Error in d5efda72f501. Was changing an iteration that would free items
to an iterator that is not safe for use in such cases.

There still seem to be significant issues with the rendering, but that's
a separate issue to be fixed.